对项目进行精简

--- a/theme-YuanJi/package.json
+++ b/theme-YuanJi/package.json
@@ -41,7 +41,7 @@
   "license": "MIT",
   "main": "index.js",
   "maintainers": [{
-    "name": "Evan xu",
-    "email": "894072666@qq.com"
+    "name": "LFJINGT",
+    "email": "2360870828@qq.com"
   }]
 }
