--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
-    "editFm": "node utils/editFrontmatter.js",
-    "baiduPush": "node utils/baiduPush.js https://LFJINGT.com && bash baiduPush.sh",
-    "publish": "cd ./theme-vdoing && npm publish && cd .. && yarn updateTheme",
-    "updateTheme": "yarn remove vuepress-theme-vdoing && rm -rf node_modules && yarn && yarn add vuepress-theme-vdoing -D"
+    "editFm": "node utils/editFrontmatter.js"
   },
   "license": "MIT",
   "devDependencies": {
