完成了首页气泡特效，添加了一些todo标识

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "eslint": "^8.5.0",
+    "vue-canvas-effect": "^0.0.12",
     "vuepress-plugin-comment": "^0.5.1",
     "vuepress-plugin-helper-live2d": "^1.0.2"
   }
