--- a/utils/config.yml
+++ b/utils/config.yml
@@ -3,7 +3,11 @@
 # 需要批量处理的路径，docs文件夹内的文件夹  (数组，映射路径：path[0]/path[1]/path[2] ... )
 path:
   - docs # 第一个成员必须是docs
-  - 04.更多
+  - 02.软件分享
+  - 11.Windows
+  # - 11.Windows
+  # - 12.Android
+  # - 13.iOS
 
 # 要删除的字段 (数组)
 delete:
@@ -11,6 +15,6 @@ delete:
 
  # 要添加、修改front matter的数据 （front matter中没有的数据则添加，已有的数据则覆盖）
 data:
-  # author:
-  #   name: LFJINGT
-  #   link: https://github.com/LFJINGT
+  author:
+    name: LFJINGT
+    link: https://github.com/LFJINGT
