--- a/docs/.vuepress/theme-YuanJi/package.json
+++ b/docs/.vuepress/theme-YuanJi/package.json
@@ -1,18 +1,6 @@
 {
-  "name": "vuepress-theme-vdoing",
+  "name": "vuepress-theme-yaunji",
   "version": "1.8.5",
-  "description": "Vdoing theme for VuePress. 一个基于VuePress的知识管理兼博客主题。",
-  "author": {
-    "name": "gaoyi(Evan) Xu"
-  },
-  "homepage": "https://github.com/xugaoyi/vuepress-theme-vdoing#readme",
-  "bugs": {
-    "url": "https://github.com/xugaoyi/vuepress-theme-vdoing/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xugaoyi/vuepress-theme-vdoing.git"
-  },
   "dependencies": {
     "@better-scroll/core": "^2.0.0-beta.6",
     "@better-scroll/slide": "^2.0.0-beta.6",
@@ -39,9 +27,5 @@
     "blog"
   ],
   "license": "MIT",
-  "main": "index.js",
-  "maintainers": [{
-    "name": "LFJINGT",
-    "email": "2360870828@qq.com"
-  }]
+  "main": "index.js"
 }
